--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "author": "andrea crego",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "mongoose": "^5.9.27",
     "morgan": "^1.10.0"
   },
   "devDependencies": {
